<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/imageWidth"
        android:layout_height="@dimen/imageHeight"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/imageMarginTop"
        android:contentDescription="@string/imageDesc"
        app:srcCompat="@drawable/elly_brian" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headingText1"
        android:layout_gravity="center"
        android:textColor="@color/textBlack"
        android:textSize="@dimen/headingTextSize"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headingText2"
        android:textColor="@color/textBlack"
        android:layout_gravity="center"
        android:textSize="@dimen/headingTextSize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introTextLine1"
            android:layout_gravity="center"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/introTextSize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introTextLine2"
            android:layout_gravity="center"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/introTextSize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introTextLine3"
            android:layout_gravity="center"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/introTextSize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introTextLine4"
            android:layout_gravity="center"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/introTextSize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introTextLine5"
            android:layout_gravity="center"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/introTextSize"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btnLinearMarginTop"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/inputMarginTop"
            android:autofillHints=""
            android:background="@drawable/input_size"
            android:hint="@string/nameInputHint"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_size"
            android:layout_gravity="center_horizontal"
            android:text="@string/createAccBtnText"
            android:elevation="@dimen/btnElevation"
            android:textColor="@color/btn_color"
            android:textSize="@dimen/btnTextSize"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>