<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".bookAppointmentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/relativeMarginStart"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/relativeMarginEnd"
            android:text="@string/bookAppHeading"
            android:textColor="@color/textBlack"
            android:textSize= "@dimen/inputTextSize" />

        <EditText
            android:id="@+id/etemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textView2"
            android:layout_marginStart="@dimen/relativeMarginStart"
            android:layout_marginTop="@dimen/relativeMarginTop"
            android:layout_marginEnd="@dimen/relativeMarginEnd"
            android:autofillHints=""
            android:background="@drawable/input_size"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/textBlack"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/deviceBrand_menu"
            style="@style/dropDownSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etemail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/relativeMarginStart"
            android:layout_marginTop="@dimen/relativeMarginTop"
            android:layout_marginEnd="@dimen/relativeMarginEnd"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/etdeviceModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/deviceBrand_menu"
            android:layout_marginStart="@dimen/relativeMarginStart"
            android:layout_marginTop="@dimen/relativeMarginTop"
            android:layout_marginEnd="@dimen/relativeMarginEnd"
            android:autofillHints=""
            android:background="@drawable/input_size"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/deviceModelHint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/textBlack"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etserialText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etdeviceModel"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/relativeMarginStart"
            android:layout_marginTop="@dimen/relativeMarginTop"
            android:layout_marginEnd="@dimen/relativeMarginEnd"
            android:autofillHints=""
            android:background="@drawable/input_size"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/serialNumberHint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColorHint="@color/textBlack"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/issue_menu"
            style="@style/dropDownSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/etserialText"
            android:layout_marginTop="@dimen/relativeMarginTop"
            android:layout_marginStart="@dimen/relativeMarginStart"
            android:layout_marginEnd="@dimen/relativeMarginEnd"
            android:spinnerMode="dropdown"/>

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/issue_menu"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/relativeMarginStart"
            android:layout_marginTop="@dimen/relativeMarginTop"
            android:layout_marginEnd="@dimen/relativeMarginEnd"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBoxesHeading"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/inputTextSize" />

            <CheckBox
                android:id="@+id/chbCharger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#006400"
                android:text="@string/checkBoxCharger"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/inputTextSize" />

            <CheckBox
                android:id="@+id/chbMouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#006400"
                android:text="@string/checkBoxMouse"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/inputTextSize" />


            <CheckBox
                android:id="@+id/chbLaptopBag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#006400"
                android:text="@string/checkBoxLaptopBag"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/inputTextSize" />

            <CheckBox
                android:id="@+id/chbOthers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#006400"
                android:text="@string/checkBoxOther"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/inputTextSize" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:layout_below="@+id/linearlayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/commentsHint"
            android:textColorHint="@color/textBlack"
            android:textSize="@dimen/inputTextSize"
            style="@style/dropDownSize"
            android:autofillHints=""
            android:layout_marginTop="@dimen/relativeMarginTop"
            android:layout_marginStart="@dimen/relativeMarginStart"
            android:layout_marginEnd="@dimen/relativeMarginEnd"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnBookApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_size"
            android:layout_below="@+id/editTextTextMultiLine"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/relativeMarginStart"
            android:layout_marginTop="@dimen/relativeMarginTop"
            android:layout_marginEnd="@dimen/relativeMarginEnd"
            android:text="@string/bookAppBtnText"
            android:textSize="@dimen/inputTextSize" />
    </RelativeLayout>
</ScrollView>